fix: Banner text illegible; journey divs absurdly long; text now centred

--- a/about-us/styling.css
+++ b/about-us/styling.css
@@ -8,6 +8,10 @@
     justify-content: center;
 }
 
+ul {
+    list-style-position: inside;
+}
+
 #yash {
     display: inline-block;
     width: 33%;
